--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -182,8 +182,8 @@
                                 <property name="use_underline">True</property>
                                 <property name="image">compose_menu_new_dm_image</property>
                                 <property name="use_stock">False</property>
-                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                                 <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
+                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                           </object>
@@ -226,8 +226,17 @@
                                       </object>
                                     </child>
                                     <child>
+                                      <object class="GtkImageMenuItem" id="selected_update_author_view_unread_updates_image_menu_item">
+                                        <property name="label" translatable="yes">View Author's _Unread Updates</property>
+                                        <property name="visible">True</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="image">image12</property>
+                                        <property name="use_stock">False</property>
+                                      </object>
+                                    </child>
+                                    <child>
                                       <object class="GtkImageMenuItem" id="selected_update_author_view_updates_image_menu_item">
-                                        <property name="label" translatable="yes">View Author's _Updates</property>
+                                        <property name="label" translatable="yes">_View Author's Updates</property>
                                         <property name="visible">True</property>
                                         <property name="use_underline">True</property>
                                         <property name="image">image4</property>
@@ -242,7 +251,7 @@
                                     <child>
                                       <object class="GtkCheckMenuItem" id="selected_update_author_best_friend_image_menu_item">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">_Best Friend the author</property>
+                                        <property name="label" translatable="yes">Make author a _Best Friends</property>
                                         <property name="use_underline">True</property>
                                       </object>
                                     </child>
@@ -994,6 +1003,7 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -1057,6 +1067,7 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">5</property>
                           </packing>
                         </child>
@@ -1084,6 +1095,7 @@
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">7</property>
                           </packing>
                         </child>
@@ -1308,7 +1320,7 @@
   </object>
   <object class="GtkImage" id="image4">
     <property name="visible">True</property>
-    <property name="stock">gtk-home</property>
+    <property name="stock">gtk-indent</property>
   </object>
   <object class="GtkImage" id="image6">
     <property name="visible">True</property>
@@ -1337,5 +1349,9 @@
   <object class="GtkImage" id="image11">
     <property name="visible">True</property>
     <property name="stock">gtk-indent</property>
+  </object>
+  <object class="GtkImage" id="image12">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
   </object>
 </interface>
